schema/testdata/validation_relationships_one_to_one_with_relation_attr_no_unique_attr/schema.keel
model Author {
    fields {
        written Post
    }
}

model Post {
    fields {
        author Author @relation(written)
    }
}
