schema/testdata/errors/relationships_one_to_one_with_relation_on_wrong_side.keel
model Author {
    fields {
        written Post @unique
    }
}

model Post {
    fields {
        //expect-error:33:40:RelationshipError:Cannot create a relationship to the unique field 'written' on Author
        author Author @relation(written)
    }
}
